2004-05-11  Matti Aarnio  <mea@zmailer.org>

	* utils/vacation/vacation.c, man/vacation.1.in:
	    Experiment a bit with attempting to reply with
	    the address that the message came in with.
	    (Pick: user, orcpt, inrcpt   in that order. Last found
	     stays in effect.)
	
	* utils/vacation/vacation.c, man/vacation.1.in:
	    Make the code to match the man page (-r option),
	    then realized that -t option document matches
	    current behaviour..   Anyway, 1.00 days is much
	    better default interval.

	* include/libz.h, lib/parseintv.c:
	    Change the passed parameters to be of 'const' type.
	    This code does not alter them.

2004-05-10  Matti Aarnio  <mea@zmailer.org>

	* router/router.c, router/shliaise.c, proto/cf/standard.cf:
	    Change the router's log thingie to log with
	    spoolid, instead of message-id.

2004-05-09  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtptls.c:
	    Detect if there is known EOF coming up in read pipe.
	    This is meaningfull to check in case we are very early
	    in SMTP session, and somebody is feeding us spam...

	* smtpserver/policytest.c, smpserver/smtpauth.c:
	    Compiler said "uname might be used uninitialized"..
	    Actually it is not used in the policy code
	    either, but that is another story...

2004-05-08  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/subdaemons.c:
	    For Solaris environemnts...  start the smtpserver's
	    subservers via execl(), actually does it for all
	    environments, but still...

	* include/shmmib.h, scheduler/scheduler.c,
	  transports/mailbox/mailbox.c, transports/smtp/smtp.c,
	  transports/expirer/expirer.c, transports/errormail/errormail.c,
	  transports/hold/hold.c, transports/sm/sm.c,
	  transports/reroute/reroute.c:
	    Changed SHMMIB area variables all to be of "volatile" kind.

	* smtpserver/smtpcmds.c, 
	    Changed report output a bit, don't give router output